--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,30 @@
+alembic==1.0.11
+asn1crypto==0.24.0
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
 Click==7.0
+config==0.4.2
+cryptography==2.7
 Flask==1.1.1
+Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
+Mako==1.0.14
 MarkupSafe==1.1.1
+ndg-httpsclient==0.5.1
+pusher==2.1.3
+pyasn1==0.4.5
+pycparser==2.19
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+python-dateutil==2.8.0
+python-editor==1.0.4
+requests==2.22.0
+six==1.12.0
+SQLAlchemy==1.3.6
+urllib3==1.25.3
 Werkzeug==0.15.5
