--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Click==7.0
 config==0.4.2
 cryptography==2.7
 Flask==1.1.1
+flask-heroku==0.1.9
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
@@ -16,6 +17,7 @@ Jinja2==2.10.1
 Mako==1.0.14
 MarkupSafe==1.1.1
 ndg-httpsclient==0.5.1
+psycopg2==2.8.3
 pusher==2.1.3
 pyasn1==0.4.5
 pycparser==2.19
